# star_wars_planets

./: .gitignore  .pre-commit-config.yaml  README.md  db.sqlite3  manage.py  pyproject.toml
core/: asgi.py  base_settings.py  dev_settings.py  prod_settings.py  urls.py  wsgi.py
core/middlewares/: audit_middleware.py
core/models/: __init__.py  base_model.py
core/utils/: pagination.py
planets/: admin.py  decorators.py  urls.py
planets/migrations/: 0001_initial.py
planets/models/: __init__.py  climate.py  planet.py  terrain.py
planets/serializers/: __init__.py  climate.py  planet.py  terrain.py
planets/tests/: test_api.py
planets/views/: __init__.py  climate.py  planet.py  terrain.py
